fixed issue where the gap between the search icon and the search input gets bigger as the viewport width gets bigger

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,4 +18,11 @@ body {
 
 .table-search {
     float: right;
+    position: relative;
+    i {
+        position: absolute;
+        left: -25px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 }
